# lib/db/src/schema/members.ts
@@ -1,4 +1,4 @@
-import { pgTable, text, serial, integer } from "drizzle-orm/pg-core";
+import { pgTable, text, serial, integer, timestamp } from "drizzle-orm/pg-core";
 import { leaguesTable } from "./leagues";
 import { teamsTable } from "./teams";
 
@@ -8,6 +8,8 @@ export const membersTable = pgTable("members", {
   teamId: integer("team_id").references(() => teamsTable.id, { onDelete: "set null" }),
   discordName: text("discord_name").notNull(),
   gamerTag: text("gamer_tag"),
+  permissions: integer("permissions").notNull().default(0),
+  createdAt: timestamp("created_at").notNull().defaultNow(),
 });
 
 export type Member = typeof membersTable.$inferSelect;
